syntax = "proto3";

package demo;

option go_package = ".;proto";

service DemoService {
  rpc Ping(PingRequest) returns (PingReply);
  rpc Panic(PanicRequest) returns (PanicReply);
  rpc CustomCode(CustomCodeRequest) returns (CustomCodeReply);
  rpc Retry(RetryRequest) returns (RetryReply);
}

message PingRequest {}
message PingReply {}

message PanicRequest {}
message PanicReply {}

message CustomCodeRequest {
  uint32 code = 1;
  string message = 2;
}
message CustomCodeReply {}

message RetryRequest {}
message RetryReply {}